# reproducibility-associativity

./: .gitignore  Cargo.toml  README.md  TestAssoc.java  eval.py  eval.sh  extrema.py  multi_testing.py  postdata.py  results.csv  results.txt  results2.csv  test_assoc.lisp  testassoc  testassoc.c  testassoc.py  testassoc.sh
R/: .Rhistory  testassoc.R
cpp/: testassoc.cpp
discriminant/: ChatGPT-Find_Real_Roots.md  ChatGPT-Naive_Discriminant_Computation.md  float-discriminant-gen.c  float-discriminant-gen2.c  float-discriminant.c  float-mpfr.c
go/: go.mod  testassoc.go
js/: package-lock.json  package.json  test_assoc.js
julia/: Project.toml
julia/src/: testassoc.jl
ocaml/: testassoc.cmi  testassoc.cmx  testassoc.ml
perl/: testassoc.pl
scala/: TestAssoc.scala  build.sbt  debug.sh
scala/.bsp/: sbt.json
scratch/: scract-exploration-demo.webm  testassoc.sb3
src_rst/: testassoc.rs
swift/: Package.swift
